--- a/devops/local/docker/.env
+++ b/devops/local/docker/.env
@@ -5,3 +5,4 @@ ADMINURL=http://adminmanager-9637:8004
 CAMUNDAURL=http://camundasvc-9637:8002
 APIGATEWAY=http://apigateway-9637:8000
 MONGO_DB_URL=mongodb://admin:password@mongo-9637:27017/mickey_9637?authSource=admin
+MANIURL=http://mani-9637:8005
